removed some (aparently unnecessary) styles that prevented centring and right-aligning from working

--- a/templates/these-threads/Default.group/style.css
+++ b/templates/these-threads/Default.group/style.css
@@ -181,7 +181,6 @@ div.text {
     font-weight: normal;
     font-style: normal;
     line-height: 1.5em;
-    width: fit-content;
 }
 
 p.text {
@@ -191,7 +190,6 @@ p.text {
     margin-bottom: 0;
     padding-top: 0;
     margin-top: 0;
-    display: table;
 }
 
 p.title {
